Добавлены картинки, шрифты, переделан блок галереи и подключены шрифты

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <div class="logo">
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Anton Milyakov">
+          <img src="img/logo__header--milyakov.svg" width="150" height="77" alt="Anton Milyakov">
         </div>
         <a class="navigation" href="#">Меню</a>
         <h1 class="page-title">
@@ -26,36 +26,126 @@
 
     <main>
       <div class="container">
-        <section class="content">
+        <section class="content content--my-experience">
           <h2 class="content__title">Мой опыт</h2>
           <div class="content__column content__column--left">
             <p class="content__text">За <span class="content__number">4</span> года, я провёл <span class="content__number">267</span> мероприятий,
                с аудиторией от <span class="content__number">8</span> до <span class="content__number">1500</span> человек.</p>
             <div class="content__column content__column--right">
               <p class="content__text">Телеведущий на каналах</p>
-              <img src="http://placehold.it/150x100" width="150" height="100" alt="МАТЧ TV">
-              <img src="http://placehold.it/150x100" width="150" height="100" alt="S TV">
+              <img src="img/logo__my-experience--match-tv.png" width="250" height="69" alt="МАТЧ TV">
+              <img src="img/logo__my-experience--s-tv.png" width="79" height="70" alt="S TV">
             </div>
           </div>
         </section>
-        <section class="content">
+        <section class="content content--how-i-work">
           <h2 class="content__title">Как я работаю</h2>
         </section>
-        <section class="content">
+        <section class="content content--about-me">
           <h2 class="content__title">Немного обо мне</h2>
           <video class="content__video" src="#"></video>
         </section>
-        <section class="content">
+        <section class="content content--portfolio">
           <h2 class="content__title">Портфолио</h2>
           <div class="gallery gallery--portfolio">
+            <figure class="gallery__item gallery__item--portfolio">
+              <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--the_golden_voice_of_russia.jpg" width="345" height="228" alt="VIII Международный вокальный фестиваль «Золотой Голос России»."></p>
+              <figcaption class="gallery__description gallery__description--portfolio">
+                <h3 class="gallery__title gallery__title--portfolio">VIII Международный вокальный фестиваль «Золотой Голос России».</h3>
+                <p class="gallery__text gallery__text--portfolio">20.01.16 в концертном зале «Королевский» более 100 вокалистов боролись за звание лучшего. Участников оценивали российская и советская певица Ольга Кормухина, финалистка шоу «Голос»
+                   Эра Канн, певец Bahh Tee, а фестиваль был показан по каналу STV.</p>
+              </figcaption>
+            </figure>
+            <figure class="gallery__item gallery__item--portfolio">
+              <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--training_on_public_speaking.jpg" width="358" height="228" alt="Тренинг по публичным выступлениям."></p>
+              <figcaption class="gallery__description gallery__description--portfolio">
+                <h3 class="gallery__title gallery__title--portfolio">Тренинг по Публичным выступлениям.</h3>
+                <p class="gallery__text gallery__text--portfolio">Делюсь накопленным опытом в своей профессиональной сфере. Не обошлось и без десятка практических упражнений.</p>
+              </figcaption>
+            </figure>
+            <figure class="gallery__item gallery__item--portfolio">
+              <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--presentation_of_the_new_collection_in_the_network_of_jewelry_stores_adamas.jpg" width="152" height="228" alt="Презентация новой коллекции в сети ювелирных магазинов «Адамас»."></p>
+              <figcaption class="gallery__description gallery__description--portfolio">
+                <h3 class="gallery__title gallery__title--portfolio">Сеть ювелирных магазинов «Адамас».</h3>
+                <p class="gallery__title gallery__title--portfolio">Презентация новой коллекции.</p>
+              </figcaption>
+            </figure>
+            <figure class="gallery__item gallery__item--portfolio">
+              <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--show_songs_from_the_stars.jpg" width="361" height="228" alt="Шоу \"Песни со звёздами\"."></p>
+              <figcaption class="gallery__description gallery__description--portfolio">
+                <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
+                <p class="gallery__text gallery__text--portfolio">В гостях лауреат премии «Золотой Граммофон» Согдиана. Клуб Пятница. Специально для канала STV.</p>
+              </figcaption>
+            </figure>
+            <figure class="gallery__item gallery__item--portfolio">
+              <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--internship_in_match_tv.jpg" width="416" height="228" alt="Стажировка на МАТЧ ТВ!"></p>
+              <figcaption class="gallery__description gallery__description--portfolio">
+                <h3 class="gallery__title gallery__title--portfolio">Стажировка на МАТЧ ТВ!</h3>
+                <p class="gallery__text gallery__text--portfolio">Десятки часов тренировок и отработок самых невероятных форс-мажорных ситуаций в студии во время прямого эфира.</p>
+              </figcaption>
+            </figure>
+            <figure class="gallery__item gallery__item--portfolio">
+              <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--tv_show_musical_ring.jpg" width="152" height="228" alt="Телешоу «Музыкальный ринг». Генеральный продюсер iRADIO Константин Кирьянов делиться своими впечатлениями от шоу."></p>
+              <figcaption class="gallery__description gallery__description--portfolio">
+                <h3 class="gallery__title gallery__title--portfolio">Телешоу «Музыкальный ринг».</h3>
+                <p class="gallery__text gallery__text--portfolio">Генеральный продюсер iRADIO Константин Кирьянов делиться своими впечатлениями от шоу.</p>
+              </figcaption>
+            </figure>
+            <figure class="gallery__item gallery__item--portfolio">
+              <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--anita_tsoy_in_the_guests_of_the_show_songs_with_the_stars.jpg" width="349" height="228" alt="Анита Цой в гостях шоу «Песни со звездами»."></p>
+              <figcaption class="gallery__description gallery__description--portfolio">
+                <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
+                <p class="gallery__text gallery__text--portfolio">В гостях Анита Цой.</p>
+              </figcaption>
+            </figure>
+            <figure class="gallery__item gallery__item--portfolio">
+              <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--the_guest_of_the_show_songs_with_stars_alexey_nazarov.jpg" width="295" height="228" alt="В гостях шоу «Песни со звездами» российский певец, битмейкер и продюсер Алексей Назаров, известный под псевдонимом LX-24."></p>
+              <figcaption class="gallery__description gallery__description--portfolio">
+                <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
+                <p class="gallery__text gallery__text--portfolio">В гостях российский певец, битмейкер и продюсер Алексей Назаров, известный под псевдонимом LX-24.</p>
+              </figcaption>
+            </figure>
             <div class="gallery__scale gallery__scale--portfolio">
               <div class="gallery__bar gallery__bar--portfolio"></div>
             </div>
           </div>
         </section>
-        <section class="content">
+        <section class="content content--clients">
           <h2 class="content__title">Клиенты</h2>
           <div class="gallery gallery--clients">
+            <figure class="gallery__item gallery__item--clients">
+              <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--mercedes-benz.png" width="201" height="143" alt="Mercedes Benz"></p>
+            </figure>
+            <figure class="gallery__item gallery__item--clients">
+              <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--toyota.png" width="176" height="145" alt="Toyota"></p>
+            </figure>
+            <figure class="gallery__item gallery__item--clients">
+              <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--lukoil.png" width="200" height="54" alt="Лукойл"></p>
+            </figure>
+            <figure class="gallery__item gallery__item--clients">
+              <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--reso-guarantee.png" width="200" height="62" alt="Ресо Гарантия"></p>
+            </figure>
+            <figure class="gallery__item gallery__item--clients">
+              <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--mega.png" width="200" height="55" alt="Мега"></p>
+            </figure>
+            <figure class="gallery__item gallery__item--clients">
+              <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--alphabet_of_taste.png" width="152" height="143" alt="Азбука Вкуса"></p>
+            </figure>
+            <figure class="gallery__item gallery__item--clients">
+              <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--zara.png" width="201" height="48" alt="Zara"></p>
+            </figure>
+            <figure class="gallery__item gallery__item--clients">
+              <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--kolbasoff.png" width="203" height="149" alt="Колбасофф"></p>
+            </figure>
+            <figure class="gallery__item gallery__item--clients">
+              <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--adamas.png" width="200" height="85" alt="Адамас"></p>
+            </figure>
+            <figure class="gallery__item gallery__item--clients">
+              <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--aviapark.png" width="203" height="40" alt="ТЦ Авиапарк"></p>
+            </figure>
+            <figure class="gallery__item gallery__item--clients">
+              <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--the_snow_queen.png" width="202" height="42" alt="Снежная Королева"></p>
+            </figure>
             <div class="gallery__scale gallery__scale--clients">
               <div class="gallery__bar gallery__bar--clients"></div>
             </div>
@@ -75,7 +165,7 @@
           </section>
           <section class="partners">
             <div class="partners__logo">
-              <img src="http://placehold.it/150x100" width="150" height="100" alt="I-Egoist">
+              <img src="img/logo__footer--i-egoist.png" width="102" height="86" alt="I-Egoist">
             </div>
             <p class="partners__text">Я одеваюсь здесь!</p>
           </section>
