Начато создание декоративных элементов в хедере

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
-      <div class="container clearfix">
+    <header class="page-header">
+      <div class="container container--header clearfix">
         <div class="logo column column--three-quarters">
           <img src="img/logo__header--milyakov.svg" width="150" height="77" alt="Anton Milyakov">
         </div>
@@ -27,7 +27,7 @@
           <p class="page-title__category">Корпоратива</p>
         </h1>
         <div class="phone-block">
-          <a class="phone-block__phone" href="tel:89262461146">+7(926)246-11-46</a>
+          <a class="phone-block__phone" href="tel:89262461146">+7 (926) 246-11-46</a>
           <a class="phone-block__btn" href="#">Заказать звонок</a>
         </div>
       </div>
