--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <h2 class="content__title content__title--my-experience">Мой опыт</h2>
           <div class="content__column content__column--left column column--ten-quarters">
             <p class="content__text">За <span class="content__number">4</span> года, я провёл <span class="content__number">267</span> мероприятий,
-               с аудиторией от <span class="content__number">8</span> до <span class="content__number">1500</span> человек.</p>
+               с&nbsp;аудиторией от <span class="content__number">8</span> до <span class="content__number">1500</span> человек.</p>
           </div>
           <div class="content__column content__column--right column column--ten-quarters">
             <p class="content__text">Телеведущий на каналах</p>
@@ -65,8 +65,8 @@
         </div>
       </section>
       <section class="content content--portfolio" id="portfolio">
+        <h2 class="content__title content__title--portfolio">Портфолио</h2>
         <div class="container container--portfolio">
-          <h2 class="content__title">Портфолио</h2>
           <div class="gallery gallery--portfolio">
             <figure class="gallery__item gallery__item--portfolio">
               <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--the_golden_voice_of_russia.jpg" width="345" height="228" alt="VIII Международный вокальный фестиваль «Золотой Голос России»."></p>
@@ -97,6 +97,7 @@
                 <p class="gallery__text gallery__text--portfolio">В гостях лауреат премии «Золотой Граммофон» Согдиана. Клуб Пятница. Специально для канала STV.</p>
               </figcaption>
             </figure>
+            <br>
             <figure class="gallery__item gallery__item--portfolio">
               <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--internship_in_match_tv.jpg" width="416" height="228" alt="Стажировка на МАТЧ ТВ!"></p>
               <figcaption class="gallery__description gallery__description--portfolio">
@@ -176,7 +177,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="container clearfix">
+      <div class="container container--footer clearfix">
         <section class="contacts column column--six-quarters" id="contacts">
           <h3 class="contacts__title">Антон Миляков</h3>
           <p class="contacts__phone">
@@ -189,8 +190,8 @@
         <section class="partners column column--ten-quarters">
           <div class="partners__logo">
             <img src="img/logo__footer--i-egoist.png" width="102" height="86" alt="I-Egoist">
+            <p class="partners__text">Я одеваюсь здесь!</p>
           </div>
-          <p class="partners__text">Я одеваюсь здесь!</p>
         </section>
         <section class="copyright column column--six-quarters">
           <p class="copyright__text">
