В процессе оформление меню

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Миляков</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/jscrollpane.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -126,9 +127,6 @@
                 <p class="gallery__text gallery__text--portfolio">В гостях российский певец, битмейкер и продюсер Алексей Назаров, известный под псевдонимом LX-24.</p>
               </figcaption>
             </figure>
-            <div class="gallery__scale gallery__scale--portfolio">
-              <div class="gallery__bar gallery__bar--portfolio"></div>
-            </div>
           </div>
         </div>
       </section>
@@ -169,9 +167,6 @@
             <figure class="gallery__item gallery__item--clients">
               <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--the_snow_queen.png" width="202" height="42" alt="Снежная Королева"></p>
             </figure>
-            <div class="gallery__scale gallery__scale--clients">
-              <div class="gallery__bar gallery__bar--clients"></div>
-            </div>
           </div>
         </div>
       </section>
@@ -200,5 +195,10 @@
         </section>
       </div>
     </footer>
+    <script src="js/jquery-2.2.4.min.js"></script>
+    <script src="js/jquery.mousewheel.js"></script>
+    <script src="js/jquery.mwheelIntent.js"></script>
+    <script src="js/jquery.jscrollpane.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
