--- a/index.html
+++ b/index.html
@@ -30,8 +30,25 @@
         <div class="phone-block">
           <a class="phone-block__phone" href="tel:89262461146">+7 (926) 246-11-46</a>
           <a class="phone-block__btn" href="#">Заказать звонок</a>
-          <a class="phone-block__slider" href="#"></a>
         </div>
+        <label for="spoiler"></label>
+      </div>
+      <input type="checkbox" id="spoiler" hidden>
+      <div class="spoiler container container--header">
+        <p class="spoiler__text spoiler__text--title">
+          Здравствуйте!<br>
+          Меня зовут Антон Миляков.
+        </p>
+        <p class="spoiler__text">Я ведущий <b class="spoiler__text spoiler__text--feature">ярких</b> мероприятий в Москве и не только.
+          От маленьких и уютных до больших и роскошных.</p>
+        <p class="spoiler__text">К каждому мероприятию у меня <b class="spoiler__text spoiler__text--feature">персональный подход</b>,
+          я стараюсь сделать их <b class="spoiler__text spoiler__text--feature">уникальными</b>
+          и не похожими друг на друга.</p>
+        <p class="spoiler__text">Сценарий каждого события составляется на основе
+          <b class="spoiler__text spoiler__text--feature">ваших пожеланий</b> и моих идей.</p>
+        <p class="spoiler__text spoiler__text--conclusion">Я люблю свою работу.
+          Видеть сияющие и радостные глаза гостей,
+          для меня <b class="spoiler__text spoiler__text--conclusion spoiler__text--feature">настоящее удовольствие</b>!</p>
       </div>
     </header>
 
