Доделана навигация, исправлен phone-block

--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
             <li class="navigation__item"><a class="navigation__link" href="#about-me">О себе</a></li>
             <li class="navigation__item"><a class="navigation__link" href="#portfolio">Портфолио</a></li>
             <li class="navigation__item"><a class="navigation__link" href="#clients">Клиенты</a></li>
-            <li class="navigation__item"><a class="navigation__link" href="#contacts">Контакты</a></li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#contacts">Контакты</a>
+              <div class="navigation__modal-window">
+                <ul class="navigation__list navigation__list--modal-window">
+                  <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="#">instagram</a></li>
+                  <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="#">vkontakte</a></li>
+                  <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="#">milyakov.anton@gmail.com</a></li>
+                </ul>
+              </div>
+            </li>
           </ul>
         </nav>
         <h1 class="page-title">
