Завершено оформление страницы до скроллбаров и галерей

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         <div class="container">
           <div class="container__inner-wrapper clearfix">
             <h2 class="content__title content__title--my-experience">Мой опыт</h2>
-            <div class="content__column content__column--left column column--ten-quarters">
+            <div class="content__column content__column--infographics column column--ten-quarters">
               <p class="content__text">За <span class="content__number">4</span> года, я провёл <span class="content__number">267</span> мероприятий,
                  с&nbsp;аудиторией от <span class="content__number">8</span> до <span class="content__number">1500</span> человек.</p>
             </div>
-            <div class="content__column content__column--right column column--ten-quarters">
-              <p class="content__text">Телеведущий на каналах</p>
+            <div class="content__column content__column--channels column column--ten-quarters">
+              <p class="content__text content__text--channels">Телеведущий на каналах</p>
               <div class="content__picture">
                 <img src="img/logo__my-experience--match-tv.png" width="250" height="69" alt="МАТЧ TV">
               </div>
@@ -89,7 +89,7 @@
       <section class="content content--how-i-work" id="how-i-work">
         <div class="container">
           <div class="container__inner-wrapper">
-            <h2 class="content__title">Как я работаю</h2>
+            <h2 class="content__title content__title--how-i-work">Как я работаю</h2>
           </div>
         </div>
       </section>
@@ -212,12 +212,12 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="container container--footer clearfix">
-        <div class="container__inner-wrapper">
+      <div class="container container--footer">
+        <div class="container__inner-wrapper clearfix">
           <section class="contacts column column--six-quarters" id="contacts">
             <h3 class="contacts__title">Антон Миляков</h3>
             <p class="contacts__phone">
-              Телефон: <a class="contacts__link" href="tel:89262461146">+7(926)246-11-46</a>
+              Телефон: <a class="contacts__link" href="tel:89262461146">+7&nbsp;(926)&nbsp;246-11-46</a>
             </p>
             <p class="contacts__email">
               Email: <a class="contacts__link" href="mailto:milyakov.anton@gmail.com">milyakov.anton@gmail.com</a>
@@ -225,13 +225,15 @@
           </section>
           <section class="partners column column--ten-quarters">
             <div class="partners__logo">
-              <img src="img/logo__footer--i-egoist.png" width="102" height="86" alt="I-Egoist">
+              <a class="partners__link" href="http://i-egoist.ru/">
+                <img src="img/logo__footer--i-egoist.png" width="102" height="86" alt="I-Egoist">
+              </a>
               <p class="partners__text">Я одеваюсь здесь!</p>
             </div>
           </section>
           <section class="copyright column column--six-quarters">
             <p class="copyright__text">
-              Разработано <span class="copyright__company">Julo</span>
+              Разработано <a class="copyright__company" href="http://startjulo.ru/">Julo</a>
             </p>
           </section>
         </div>
