--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Миляков</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/jscrollpane.css">
+    <!-- <link rel="stylesheet" href="css/jscrollpane.css"> -->
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -106,64 +106,71 @@
         <div class="container">
           <div class="container__inner-wrapper container__inner-wrapper--portfolio">
             <div class="gallery gallery--portfolio">
-              <figure class="gallery__item gallery__item--portfolio">
-                <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--the_golden_voice_of_russia.jpg" width="345" height="228" alt="VIII Международный вокальный фестиваль «Золотой Голос России»."></p>
-                <figcaption class="gallery__description gallery__description--portfolio">
-                  <h3 class="gallery__title gallery__title--portfolio">VIII Международный вокальный фестиваль «Золотой Голос России».</h3>
-                  <p class="gallery__text gallery__text--portfolio">20.01.16 в концертном зале «Королевский» более 100 вокалистов боролись за звание лучшего. Участников оценивали российская и советская певица Ольга Кормухина, финалистка шоу «Голос»
-                     Эра Канн, певец Bahh Tee, а фестиваль был показан по каналу STV.</p>
-                </figcaption>
-              </figure>
-              <figure class="gallery__item gallery__item--portfolio">
-                <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--training_on_public_speaking.jpg" width="358" height="228" alt="Тренинг по публичным выступлениям."></p>
-                <figcaption class="gallery__description gallery__description--portfolio">
-                  <h3 class="gallery__title gallery__title--portfolio">Тренинг по Публичным выступлениям.</h3>
-                  <p class="gallery__text gallery__text--portfolio">Делюсь накопленным опытом в своей профессиональной сфере. Не обошлось и без десятка практических упражнений.</p>
-                </figcaption>
-              </figure>
-              <figure class="gallery__item gallery__item--portfolio">
-                <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--presentation_of_the_new_collection_in_the_network_of_jewelry_stores_adamas.jpg" width="152" height="228" alt="Презентация новой коллекции в сети ювелирных магазинов «Адамас»."></p>
-                <figcaption class="gallery__description gallery__description--portfolio">
-                  <h3 class="gallery__title gallery__title--portfolio">Сеть ювелирных магазинов «Адамас».</h3>
-                  <p class="gallery__title gallery__title--portfolio">Презентация новой коллекции.</p>
-                </figcaption>
-              </figure>
-              <figure class="gallery__item gallery__item--portfolio">
-                <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--show_songs_from_the_stars.jpg" width="361" height="228" alt="Шоу \"Песни со звёздами\"."></p>
-                <figcaption class="gallery__description gallery__description--portfolio">
-                  <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
-                  <p class="gallery__text gallery__text--portfolio">В гостях лауреат премии «Золотой Граммофон» Согдиана. Клуб Пятница. Специально для канала STV.</p>
-                </figcaption>
-              </figure>
-              <br>
-              <figure class="gallery__item gallery__item--portfolio">
-                <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--internship_in_match_tv.jpg" width="416" height="228" alt="Стажировка на МАТЧ ТВ!"></p>
-                <figcaption class="gallery__description gallery__description--portfolio">
-                  <h3 class="gallery__title gallery__title--portfolio">Стажировка на МАТЧ ТВ!</h3>
-                  <p class="gallery__text gallery__text--portfolio">Десятки часов тренировок и отработок самых невероятных форс-мажорных ситуаций в студии во время прямого эфира.</p>
-                </figcaption>
-              </figure>
-              <figure class="gallery__item gallery__item--portfolio">
-                <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--tv_show_musical_ring.jpg" width="152" height="228" alt="Телешоу «Музыкальный ринг». Генеральный продюсер iRADIO Константин Кирьянов делиться своими впечатлениями от шоу."></p>
-                <figcaption class="gallery__description gallery__description--portfolio">
-                  <h3 class="gallery__title gallery__title--portfolio">Телешоу «Музыкальный ринг».</h3>
-                  <p class="gallery__text gallery__text--portfolio">Генеральный продюсер iRADIO Константин Кирьянов делиться своими впечатлениями от шоу.</p>
-                </figcaption>
-              </figure>
-              <figure class="gallery__item gallery__item--portfolio">
-                <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--anita_tsoy_in_the_guests_of_the_show_songs_with_the_stars.jpg" width="349" height="228" alt="Анита Цой в гостях шоу «Песни со звездами»."></p>
-                <figcaption class="gallery__description gallery__description--portfolio">
-                  <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
-                  <p class="gallery__text gallery__text--portfolio">В гостях Анита Цой.</p>
-                </figcaption>
-              </figure>
-              <figure class="gallery__item gallery__item--portfolio">
-                <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--the_guest_of_the_show_songs_with_stars_alexey_nazarov.jpg" width="295" height="228" alt="В гостях шоу «Песни со звездами» российский певец, битмейкер и продюсер Алексей Назаров, известный под псевдонимом LX-24."></p>
-                <figcaption class="gallery__description gallery__description--portfolio">
-                  <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
-                  <p class="gallery__text gallery__text--portfolio">В гостях российский певец, битмейкер и продюсер Алексей Назаров, известный под псевдонимом LX-24.</p>
-                </figcaption>
-              </figure>
+              <div class="gallery__container">
+                <figure class="gallery__item gallery__item--portfolio">
+                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--the_golden_voice_of_russia.jpg" width="345" height="228" alt="VIII Международный вокальный фестиваль «Золотой Голос России»."></p>
+                  <figcaption class="gallery__description gallery__description--portfolio">
+                    <h3 class="gallery__title gallery__title--portfolio">VIII Международный вокальный фестиваль «Золотой Голос России».</h3>
+                    <p class="gallery__text gallery__text--portfolio">20.01.16 в концертном зале «Королевский» более 100 вокалистов боролись за звание лучшего. Участников оценивали российская и советская певица Ольга Кормухина, финалистка шоу «Голос»
+                       Эра Канн, певец Bahh Tee, а фестиваль был показан по каналу STV.</p>
+                  </figcaption>
+                </figure>
+                <figure class="gallery__item gallery__item--portfolio">
+                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--training_on_public_speaking.jpg" width="358" height="228" alt="Тренинг по публичным выступлениям."></p>
+                  <figcaption class="gallery__description gallery__description--portfolio">
+                    <h3 class="gallery__title gallery__title--portfolio">Тренинг по Публичным выступлениям.</h3>
+                    <p class="gallery__text gallery__text--portfolio">Делюсь накопленным опытом в своей профессиональной сфере. Не обошлось и без десятка практических упражнений.</p>
+                  </figcaption>
+                </figure>
+                <figure class="gallery__item gallery__item--portfolio">
+                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--presentation_of_the_new_collection_in_the_network_of_jewelry_stores_adamas.jpg" width="152" height="228" alt="Презентация новой коллекции в сети ювелирных магазинов «Адамас»."></p>
+                  <figcaption class="gallery__description gallery__description--portfolio">
+                    <h3 class="gallery__title gallery__title--portfolio">Сеть ювелирных магазинов «Адамас».</h3>
+                    <p class="gallery__title gallery__title--portfolio">Презентация новой коллекции.</p>
+                  </figcaption>
+                </figure>
+                <figure class="gallery__item gallery__item--portfolio">
+                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--show_songs_from_the_stars.jpg" width="361" height="228" alt="Шоу \"Песни со звёздами\"."></p>
+                  <figcaption class="gallery__description gallery__description--portfolio">
+                    <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
+                    <p class="gallery__text gallery__text--portfolio">В гостях лауреат премии «Золотой Граммофон» Согдиана. Клуб Пятница. Специально для канала STV.</p>
+                  </figcaption>
+                </figure>
+                <br>
+                <figure class="gallery__item gallery__item--portfolio">
+                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--internship_in_match_tv.jpg" width="416" height="228" alt="Стажировка на МАТЧ ТВ!"></p>
+                  <figcaption class="gallery__description gallery__description--portfolio">
+                    <h3 class="gallery__title gallery__title--portfolio">Стажировка на МАТЧ ТВ!</h3>
+                    <p class="gallery__text gallery__text--portfolio">Десятки часов тренировок и отработок самых невероятных форс-мажорных ситуаций в студии во время прямого эфира.</p>
+                  </figcaption>
+                </figure>
+                <figure class="gallery__item gallery__item--portfolio">
+                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--tv_show_musical_ring.jpg" width="152" height="228" alt="Телешоу «Музыкальный ринг». Генеральный продюсер iRADIO Константин Кирьянов делиться своими впечатлениями от шоу."></p>
+                  <figcaption class="gallery__description gallery__description--portfolio">
+                    <h3 class="gallery__title gallery__title--portfolio">Телешоу «Музыкальный ринг».</h3>
+                    <p class="gallery__text gallery__text--portfolio">Генеральный продюсер iRADIO Константин Кирьянов делиться своими впечатлениями от шоу.</p>
+                  </figcaption>
+                </figure>
+                <figure class="gallery__item gallery__item--portfolio">
+                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--anita_tsoy_in_the_guests_of_the_show_songs_with_the_stars.jpg" width="349" height="228" alt="Анита Цой в гостях шоу «Песни со звездами»."></p>
+                  <figcaption class="gallery__description gallery__description--portfolio">
+                    <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
+                    <p class="gallery__text gallery__text--portfolio">В гостях Анита Цой.</p>
+                  </figcaption>
+                </figure>
+                <figure class="gallery__item gallery__item--portfolio">
+                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--the_guest_of_the_show_songs_with_stars_alexey_nazarov.jpg" width="295" height="228" alt="В гостях шоу «Песни со звездами» российский певец, битмейкер и продюсер Алексей Назаров, известный под псевдонимом LX-24."></p>
+                  <figcaption class="gallery__description gallery__description--portfolio">
+                    <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
+                    <p class="gallery__text gallery__text--portfolio">В гостях российский певец, битмейкер и продюсер Алексей Назаров, известный под псевдонимом LX-24.</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="scroll scroll--portfolio">
+                <div class="scroll__arrow scroll__arrow--left"></div>
+                <div class="scroll__track"></div>
+                <div class="scroll__arrow scroll__arrow--right"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -173,39 +180,46 @@
           <div class="container__inner-wrapper">
             <h2 class="content__title">Клиенты</h2>
             <div class="gallery gallery--clients">
-              <figure class="gallery__item gallery__item--clients">
-                <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--mercedes-benz.png" width="201" height="143" alt="Mercedes Benz"></p>
-              </figure>
-              <figure class="gallery__item gallery__item--clients">
-                <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--toyota.png" width="176" height="145" alt="Toyota"></p>
-              </figure>
-              <figure class="gallery__item gallery__item--clients">
-                <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--lukoil.png" width="200" height="54" alt="Лукойл"></p>
-              </figure>
-              <figure class="gallery__item gallery__item--clients">
-                <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--reso-guarantee.png" width="200" height="62" alt="Ресо Гарантия"></p>
-              </figure>
-              <figure class="gallery__item gallery__item--clients">
-                <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--mega.png" width="200" height="55" alt="Мега"></p>
-              </figure>
-              <figure class="gallery__item gallery__item--clients">
-                <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--alphabet_of_taste.png" width="152" height="143" alt="Азбука Вкуса"></p>
-              </figure>
-              <figure class="gallery__item gallery__item--clients">
-                <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--zara.png" width="201" height="48" alt="Zara"></p>
-              </figure>
-              <figure class="gallery__item gallery__item--clients">
-                <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--kolbasoff.png" width="203" height="149" alt="Колбасофф"></p>
-              </figure>
-              <figure class="gallery__item gallery__item--clients">
-                <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--adamas.png" width="200" height="85" alt="Адамас"></p>
-              </figure>
-              <figure class="gallery__item gallery__item--clients">
-                <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--aviapark.png" width="203" height="40" alt="ТЦ Авиапарк"></p>
-              </figure>
-              <figure class="gallery__item gallery__item--clients">
-                <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--the_snow_queen.png" width="202" height="42" alt="Снежная Королева"></p>
-              </figure>
+              <div class="gallery__container">
+                <figure class="gallery__item gallery__item--clients">
+                  <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--mercedes-benz.png" width="201" height="143" alt="Mercedes Benz"></p>
+                </figure>
+                <figure class="gallery__item gallery__item--clients">
+                  <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--toyota.png" width="176" height="145" alt="Toyota"></p>
+                </figure>
+                <figure class="gallery__item gallery__item--clients">
+                  <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--lukoil.png" width="200" height="54" alt="Лукойл"></p>
+                </figure>
+                <figure class="gallery__item gallery__item--clients">
+                  <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--reso-guarantee.png" width="200" height="62" alt="Ресо Гарантия"></p>
+                </figure>
+                <figure class="gallery__item gallery__item--clients">
+                  <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--mega.png" width="200" height="55" alt="Мега"></p>
+                </figure>
+                <figure class="gallery__item gallery__item--clients">
+                  <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--alphabet_of_taste.png" width="152" height="143" alt="Азбука Вкуса"></p>
+                </figure>
+                <figure class="gallery__item gallery__item--clients">
+                  <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--zara.png" width="201" height="48" alt="Zara"></p>
+                </figure>
+                <figure class="gallery__item gallery__item--clients">
+                  <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--kolbasoff.png" width="203" height="149" alt="Колбасофф"></p>
+                </figure>
+                <figure class="gallery__item gallery__item--clients">
+                  <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--adamas.png" width="200" height="85" alt="Адамас"></p>
+                </figure>
+                <figure class="gallery__item gallery__item--clients">
+                  <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--aviapark.png" width="203" height="40" alt="ТЦ Авиапарк"></p>
+                </figure>
+                <figure class="gallery__item gallery__item--clients">
+                  <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--the_snow_queen.png" width="202" height="42" alt="Снежная Королева"></p>
+                </figure>
+              </div>
+              <div class="scroll scroll--portfolio">
+                <div class="scroll__arrow scroll__arrow--left"></div>
+                <div class="scroll__track"></div>
+                <div class="scroll__arrow scroll__arrow--right"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -239,10 +253,10 @@
         </div>
       </div>
     </footer>
-    <script src="js/jquery-2.2.4.min.js"></script>
+    <!-- <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/jquery.mousewheel.js"></script>
     <script src="js/jquery.mwheelIntent.js"></script>
-    <script src="js/jquery.jscrollpane.min.js"></script>
+    <script src="js/jquery.jscrollpane.min.js"></script> -->
     <script src="js/script.js"></script>
   </body>
 </html>
