Доделаны стрелочки и поставлено ограничение на скроллинг. Остановился на оживление трека. Скрипт недописан, т.е. нерабочий.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="container">
           <div class="container__inner-wrapper container__inner-wrapper--portfolio">
             <div class="gallery gallery--portfolio">
-              <div class="gallery__container">
+              <div class="gallery__container gallery__container--portfolio">
                 <figure class="gallery__item gallery__item--portfolio">
                   <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--the_golden_voice_of_russia.jpg" width="345" height="228" alt="VIII Международный вокальный фестиваль «Золотой Голос России»."></p>
                   <figcaption class="gallery__description gallery__description--portfolio">
@@ -180,7 +180,7 @@
           <div class="container__inner-wrapper">
             <h2 class="content__title">Клиенты</h2>
             <div class="gallery gallery--clients">
-              <div class="gallery__container">
+              <div class="gallery__container gallery__container--clients">
                 <figure class="gallery__item gallery__item--clients">
                   <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--mercedes-benz.png" width="201" height="143" alt="Mercedes Benz"></p>
                 </figure>
